--- a/estilo/style.css
+++ b/estilo/style.css
@@ -18,12 +18,14 @@ h1{
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    text-shadow: 0 0 5px rgb(0, 0, 0);
 }
 h2{
     font-family: "Noto Sans", sans-serif;
     text-align: center;
     margin-top: 20px;
     text-decoration: underline;
+    text-shadow: 0 0 2px rgb(0, 0, 0);
     font-size: 160%;
 }
 h3{
@@ -33,22 +35,28 @@ h3{
     margin-top: 15px;
     margin-bottom: 15px;
     text-decoration: underline;
+    text-shadow: 0 0 2px rgb(0, 0, 0);
 }
 h4{
     font-family: "Noto Sans", sans-serif;
     font-weight: 600;
     margin-top: 15px;
     margin-left: 30px;
+    text-shadow: 0 0 2px rgb(0, 0, 0);
 }
 h5{
     font-size: larger;
     text-decoration: underline;
+    text-shadow: 0 0 1px rgb(0, 0, 0);
 }
 .header{
     font-size: 120%;
     font-family: "Open Sans", sans-serif;
     padding: 10px 20px;
     display: inline-block;
+}
+li a:hover{
+    color: black;
 }
 header{
     text-align: center;
