--- a/estilo/style.css
+++ b/estilo/style.css
@@ -139,6 +139,7 @@ p{
 }
 
 /* INICIO MEDIA QUERIES */
+    /* MEDIA QUERIES MOBILE S */
 @media (min-width: 320px){
     h1{
         font-size: 70px;
@@ -151,44 +152,105 @@ p{
         width: 300px;
         padding-left: 20px;
         padding-bottom: 20px;
-    }   
-}
-@media (min-width: 515px){
-    h1{
-        font-size: 90px;
-        text-align: center;
-        padding: 150px;
-    }
-    iframe{
-        height: 400px;
-        width: 500px;
-        padding-left: 20px;
-        padding-bottom: 20px;
-    }
-}
-@media (min-width: 750px){
-    h1{
-        font-size: 150px;
-        padding: 205px;
-        text-align: center;
-    }
-    iframe{
-        width: 750px;
-        height: 500px;
-        padding: 0px 40px 50px 40px;
     }
     .tarjetas_productos{
-        grid-template-columns: auto auto auto;
-        justify-content: space-evenly;
+        display: grid;
+        justify-content: center;
     }
-    .tarjeta_album{
-        padding: 15px 15px 60px 15px;
+    .tarjeta_img{
+        width: 280px;
+        padding: 15px 15px 10px 15px;
+    }
+    .tarjeta_container{
         border-radius: 10px;
     }
 }
-@media (max-width: 375px){
-    
+    /* MEDIA QUERIES MOBILE M */
+@media (min-width: 375px){
+    h1{
+        font-size: 70px;
+        text-align: center;
+        padding: 70px;
+    }
+    iframe{
+        height: 350px;
+        width: 350px;
+        padding-left: 20px;
+        padding-bottom: 20px;
+    }
+    .tarjeta_img{
+        width: 320px;
+    }
 }
+    /* MEDIA QUERIES MOBILE L */
+@media (min-width: 425px){
+    h1{
+        font-size: 80px;
+        padding: 80px;
+        text-align: center;
+    }
+    iframe{
+        width: 400px;
+        height: 400px;
+        padding-left: 20px;
+        padding-bottom: 20px;
+    }
+    .tarjeta_img{
+        width: 360px;
+        border-radius: 10px;
+    }
+}
+    /* MEDIA QUERIES TABLET */
+@media (min-width: 768px){
+    h1{
+        font-size: 120px;
+    }
+    iframe{
+        width: 710px;
+        height: 500px;
+        padding-left: 50px;
+    }
+}
+    /* MEDIA QUERIES LAPTOP */
+@media (min-width: 1024px){
+    h1{
+        font-size: 160px;
+        padding: 110px;
+    }
+    .tarjetas_productos{
+        display: grid;
+        grid-template-columns: auto auto;
+        justify-content: space-evenly;
+    }
+    .tarjeta_img{
+        width: 400px;
+        padding: 20px 20px 10px 20px;
+        border-radius: 10px;
+    }
+    iframe{
+        width: 970px;
+        height: 600px;
+        padding-left: 50px;
+    }
+}
+    /* MEDIA QUERIES LAPTOP L */
+@media (min-width: 1440px){
+    h1{
+        font-size: 180px;
+        padding: 180px;
+    }
+    .tarjetas_productos{
+        display: grid;
+        grid-template-columns: auto auto auto;
+        justify-content: space-evenly;
+    }
+    iframe{
+        width: 970px;
+        height: 600px;
+        padding-left: 50px;
+    }
+}
+
 /* FIN MEDIA QUERIES */
 
 .catalogo_list{
@@ -204,7 +266,7 @@ p{
     display: grid;
     background-color: rgb(206, 206, 206);
 }
-.tarjeta_album{
+.tarjeta_container{
     background-color: rgb(235, 235, 235);
     margin-top: 50px;
     margin-bottom: 50px;
