--- a/estilo/style.css
+++ b/estilo/style.css
@@ -275,6 +275,7 @@ p{
 /* FOOTER */
 footer{
     font-family: "Noto Sans", sans-serif;
+    color: rgb(0, 0, 0);
     background-color: rgb(50, 50, 50);
     padding-top: 40px;
     padding-bottom: 40px;
